--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Student QR</title>
 
+<!-- QR GENERATE -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
+<!-- QR SCAN -->
 <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
 
 <style>
@@ -26,7 +29,6 @@ body {
     inset: 0;
     background: rgba(8,12,28,0.65);
     backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,8 +73,7 @@ body {
     word-break: break-word;
 }
 
-input[type="number"],
-input[type="file"] {
+input {
     width: 100%;
     padding: 11px;
     border-radius: 6px;
@@ -97,7 +98,7 @@ button {
 .center-text {
     text-align: center;
     font-size: 14px;
-    margin-bottom: 12px;
+    margin: 10px 0;
 }
 </style>
 </head>
@@ -108,16 +109,22 @@ button {
     <div class="modal" id="app"></div>
 </div>
 
+<!-- hidden container for image QR decoding -->
+<div id="img-reader" style="display:none;"></div>
+
 <script>
 const app = document.getElementById("app");
-let html5Qr = null;
+let cameraScanner = null;
 
-function todayDate() {
+/* ---------- UTIL ---------- */
+function today() {
     return new Date().toISOString().split("T")[0];
 }
 
 /* ---------- QR DISPLAY ---------- */
 function showQR(studentNo) {
+    stopScanner();
+
     app.innerHTML = `
         <div class="header">
             <span>QRCode</span>
@@ -128,34 +135,33 @@ function showQR(studentNo) {
             <div id="qrcode"></div>
         </div>
 
-        <div class="qr-text">
-            ${studentNo}/${todayDate()}/student
-        </div>
+        <div class="qr-text">${studentNo}/${today()}/student</div>
     `;
 
     new QRCode(document.getElementById("qrcode"), {
-        text: `${studentNo}/${todayDate()}/student`,
+        text: `${studentNo}/${today()}/student`,
         width: 210,
         height: 210,
         correctLevel: QRCode.CorrectLevel.H
     });
 }
 
-/* ---------- REGISTER ---------- */
+/* ---------- REGISTER PAGE ---------- */
 function showRegister() {
     stopScanner();
+
     app.innerHTML = `
         <div class="header">
             <span>Register Student</span>
         </div>
 
         <input type="number" id="studentInput" placeholder="Enter student number">
-        <button class="primary" onclick="registerStudent()">Register</button>
+        <button class="primary" onclick="registerManual()">Register</button>
         <button class="secondary" onclick="openScanner()">Register with QR</button>
     `;
 }
 
-/* ---------- SCANNER (FIXED) ---------- */
+/* ---------- CAMERA SCANNER ---------- */
 function openScanner() {
     app.innerHTML = `
         <div class="header">
@@ -170,41 +176,49 @@ function openScanner() {
         <input type="file" accept="image/*" onchange="scanImage(event)">
     `;
 
-    html5Qr = new Html5Qrcode("reader");
+    cameraScanner = new Html5Qrcode("reader");
 
-    Html5Qrcode.getCameras()
-        .then(cameras => {
-            if (!cameras.length) {
-                alert("No camera found");
-                return;
-            }
+    Html5Qrcode.getCameras().then(cameras => {
+        if (!cameras.length) {
+            alert("No camera found");
+            return;
+        }
 
-            // Prefer back camera
-            const cameraId = cameras.find(c => c.label.toLowerCase().includes("back"))?.id
-                || cameras[0].id;
+        const backCam = cameras.find(c =>
+            c.label.toLowerCase().includes("back")
+        ) || cameras[0];
 
-            html5Qr.start(
-                cameraId,
-                { fps: 10, qrbox: 220 },
-                onScanSuccess,
-                () => {} // ignore scan errors
-            );
-        })
-        .catch(err => {
-            alert("Camera permission denied or not supported");
-            console.error(err);
-        });
+        cameraScanner.start(
+            backCam.id,
+            { fps: 10, qrbox: 220 },
+            onScanSuccess,
+            () => {}
+        );
+    }).catch(err => {
+        alert("Camera permission denied");
+        console.error(err);
+    });
 }
 
-/* ---------- IMAGE SCAN ---------- */
+/* ---------- IMAGE SCAN (FIXED) ---------- */
 function scanImage(event) {
     const file = event.target.files[0];
     if (!file) return;
 
-    const imgScanner = new Html5Qrcode("reader");
-    imgScanner.scanFile(file, true)
-        .then(onScanSuccess)
-        .catch(() => alert("Invalid QR image"));
+    stopScanner();
+
+    const imgScanner = new Html5Qrcode("img-reader");
+
+    imgScanner.scanFile(file, false)
+        .then(text => {
+            imgScanner.clear();
+            onScanSuccess(text);
+        })
+        .catch(err => {
+            imgScanner.clear();
+            alert("Invalid QR image");
+            console.error(err);
+        });
 }
 
 /* ---------- QR RESULT ---------- */
@@ -224,6 +238,7 @@ function onScanSuccess(decodedText) {
 /* ---------- CLEAR CONFIRM ---------- */
 function showClearConfirm() {
     stopScanner();
+
     app.innerHTML = `
         <div class="header">
             <span>Clear Data</span>
@@ -237,10 +252,12 @@ function showClearConfirm() {
 }
 
 /* ---------- ACTIONS ---------- */
-function registerStudent() {
+function registerManual() {
     const val = document.getElementById("studentInput").value.trim();
-    if (!val) return alert("Enter student number");
-
+    if (!val) {
+        alert("Enter student number");
+        return;
+    }
     localStorage.setItem("studentNumber", val);
     showQR(val);
 }
@@ -251,21 +268,21 @@ function clearStorage() {
 }
 
 function goBack() {
-    const studentNo = localStorage.getItem("studentNumber");
-    if (studentNo) showQR(studentNo);
+    const s = localStorage.getItem("studentNumber");
+    if (s) showQR(s);
 }
 
 function stopScanner() {
-    if (html5Qr) {
-        html5Qr.stop().catch(() => {});
-        html5Qr.clear();
-        html5Qr = null;
+    if (cameraScanner) {
+        cameraScanner.stop().catch(() => {});
+        cameraScanner.clear();
+        cameraScanner = null;
     }
 }
 
 /* ---------- INIT ---------- */
-const savedStudent = localStorage.getItem("studentNumber");
-savedStudent ? showQR(savedStudent) : showRegister();
+const saved = localStorage.getItem("studentNumber");
+saved ? showQR(saved) : showRegister();
 </script>
 
 </body>
